[project]
name = "pickem-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.166.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.38.0",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
